--- a/_posts/2021-03-20-apple-cinnamon-muffins/apple-cinnamon-muffins.Rmd
+++ b/_posts/2021-03-20-apple-cinnamon-muffins/apple-cinnamon-muffins.Rmd
@@ -14,6 +14,7 @@ categories:
   - baked
   - muffin
   - apple
+  - breakfast
 ---
 
 Bake at 400F for 20 - 25 min. Makes 12 really big muffins, or 20 - 24 smaller muffins.
