--- a/_posts/2021-03-20-easy-oatmeal-raisin-breakfast-bars/easy-oatmeal-raisin-breakfast-bars.Rmd
+++ b/_posts/2021-03-20-easy-oatmeal-raisin-breakfast-bars/easy-oatmeal-raisin-breakfast-bars.Rmd
@@ -34,8 +34,8 @@ Bake at 350F.
 * Preheat oven to 350 F.
 * Grease a 8x11 or 9x9 baking pan.
 
-* Whisk together oats, flour, baking powder and cinnamon.
-* Add mashed banana and honey to oat mixture and stir until combined, stir in the chocolate chips or raisins.
+* Whisk together **2 1/4 cups** oats, **1/2 cup** flour, **1/2 tsp** baking powder and **1/2 tsp** cinnamon.
+* Add **1 cup** mashed banana and **1/2 cup** honey to oat mixture and stir until combined, stir in the **1 cup** chocolate chips or raisins.
 * Scoop into the pan, and compress, smoothing out the top.
 * Bake 25-30 minutes, or until top of the bars are firm and golden brown.
 * Let cool, cut into squares. Store in the fridge or freezer.
