--- a/_posts/2021-03-08-chicken-pot-pie/chicken-pot-pie.Rmd
+++ b/_posts/2021-03-08-chicken-pot-pie/chicken-pot-pie.Rmd
@@ -25,23 +25,33 @@ knitr::opts_chunk$set(echo = FALSE)
 knitr::include_graphics("pot_pie_to_eat.jpg")
 ```
 
+## Preparation Time
+
+* Prep time: 15 - 20 min to prep the filling (outside of the shredded chicken breast).
+* Bake time: 40 min.
+* Resting: 10 min.
+
 ## Ingredients
 
-* 1 prepared pie crust, room temperature.
+* 2 cups of shredded chicken breast
+  * I like [this method](https://rmflight.github.io/recipes/posts/2021-11-06-poached-chicken-breast-instant-pot) of cooking chicken breast for this.
+* 2 prepared pie crusts, room temperature
 * 1 Tbsp oil
-* 2 large carrots, chopped
+* 3 large carrots, chopped
 * 1 Tbsp minced onion
 * 1 tsp minced garlic
 * 1/3 cup butter
 * 1/3 cup flour
 * 1 3/4 cup chicken stock
+  * I'll be honest, I take 2 heaping teaspoons (teaspoon from my cutlery drawer) of dried chicken stock mix into 1 3/4 water for this.
 * 1/2 cup milk
 * salt and pepper to taste
-* 2 cups of shredded chicken breast
-  * I like [this method](https://rmflight.github.io/recipes/posts/2021-11-06-poached-chicken-breast-instant-pot) of cooking chicken breast for this.
+* 1 tsp rubbed or dried sage or to taste
 * 1/2 cup frozen peas
 
 ## Directions
+
+* Make sure your pie crust is at room temperature.
 
 * Dice **3 large** carrots.
 
@@ -77,10 +87,11 @@ knitr::include_graphics("chicken_shredded.jpg")
 knitr::include_graphics("chicken_filling.jpg")
 ```
 
-* Pour mixture into a greased pie pan.
-* Cover with a prepared pie crust.
-* Poke holes in the pie crust.
-* Cover edges of pie crust with aluminum foil.
+* Grease or spray a pie pan and put one pie crust in.
+* Pour mixture into the pie pan over the first pie crust.
+* Cover with the second pie crust.
+* Poke holes in the second pie crust.
+* Cover edges of pie crust with aluminum foil all around the pan.
 
 * Bake at 425 for 20 minutes.
 * Remove aluminum foil from pie crust edges.
@@ -94,3 +105,9 @@ knitr::include_graphics("pot_pie_baked.jpg")
 
 
 Adapted from [Pillsbury chicken pot pie](https://www.pillsbury.com/recipes/classic-chicken-pot-pie/1401d418-ac0b-4b50-ad09-c6f1243fb992)
+
+
+## Recipe History
+
+* Originally written 2021-03-08
+* Updated 2021-12-06 to use two pie crusts, correct number of carrots, and using rubbed or dried sage, as well as preparation time.
