updated cinnamon buns with nutritional info

--- a/_posts/2021-03-20-1-hour-cinnamon-rolls/1-hour-cinnamon-rolls.Rmd
+++ b/_posts/2021-03-20-1-hour-cinnamon-rolls/1-hour-cinnamon-rolls.Rmd
@@ -77,6 +77,10 @@ categories:
 * Place on the center rack of the oven and bake for 15-20 minutes, or until the rolls are golden and cooked through.
 * Remove and let cool on a wire rack for at least 5 minutes.
 
+### Nutritional Info
+
+2700 kCal total, assuming 13 / 14 servings, **200** kCal / bun.
+
 ## Cream Cheese Icing
 
 * 4 ounces (1/2 cup) cream cheese, softened
@@ -88,6 +92,10 @@ categories:
 Whisk ingredients together in a mixing bowl.
 Drizzle on cinnamon rolls while still warm.
 
+### Nutritional Info
+
+1200 kCal, assuming 13 / 14 servings, **90** kCal / bun
+
 ## Traditional Icing
 
 * 1/4 cup butter, melted
@@ -97,6 +105,10 @@ Drizzle on cinnamon rolls while still warm.
 
 Whisk ingredients together in a mixing bowl.
 Drizzle on cinnamon rolls while still warm.
+
+### Nutritional Info
+
+1000 kCal, assuming 13 / 14 servings, **70** kCal / bun
 
 Originally sourced from [Gimme Some Oven 1 hour Cinnamon Rolls](https://www.gimmesomeoven.com/1-hour-easy-cinnamon-rolls-recipe/)
 
