some more nutritional info

--- a/_posts/2021-03-08-chicken-pot-pie/chicken-pot-pie.Rmd
+++ b/_posts/2021-03-08-chicken-pot-pie/chicken-pot-pie.Rmd
@@ -111,3 +111,7 @@ Adapted from [Pillsbury chicken pot pie](https://www.pillsbury.com/recipes/class
 
 * Originally written 2021-03-08
 * Updated 2021-12-06 to use two pie crusts, correct number of carrots, and using rubbed or dried sage, as well as preparation time.
+
+## Nutrition Info
+
+2960 kCal for the pie, 8 servings, 370 kCal / serving.
