--- a/_posts/2021-03-20-easy-oatmeal-raisin-breakfast-bars/easy-oatmeal-raisin-breakfast-bars.Rmd
+++ b/_posts/2021-03-20-easy-oatmeal-raisin-breakfast-bars/easy-oatmeal-raisin-breakfast-bars.Rmd
@@ -41,3 +41,7 @@ Bake at 350F.
 * Let cool, cut into squares. Store in the fridge or freezer.
 
 Original sourced from [Nibble and Dine Easy Oatmeal Raisin Breakfast Bars](https://nibbleanddine.com/easy-oatmeal-raisin-breakfast-bars/?fbclid=IwAR3SFGy_rPVgo1Nc6ybOZBULJYDPGY0W_yO7ST1HOV6uYDDHG3p1AZJO8U0#tasty-recipes-3178)
+
+## Nutritional Information
+
+3000 kCal for ingredients, and then 15 servings / pan is 200 kCal / serving.
