and adding the source

--- a/_posts/2022-02-12-chocolate-chip-muffins/chocolate-chip-muffins.Rmd
+++ b/_posts/2022-02-12-chocolate-chip-muffins/chocolate-chip-muffins.Rmd
@@ -51,3 +51,5 @@ categories:
 
 * Total Calories: 3810 kCal
 * 12 Muffins: 318 kCal each
+
+Sourced from [Charishma Ramchanda](https://www.food.com/recipe/chocolate-chip-muffins-9326).
