added rice vinegar to the balsamic chicken b/c it's just better

--- a/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.Rmd
+++ b/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.Rmd
@@ -20,6 +20,7 @@ categories:
 ## Ingredients
 
 * 4 Tbsp Balsamic vinegar
+* 2 Tbsp Rice vinegar
 * 1.5 Tbsp soy sauce
 * 1 Tbsp brown sugar
 * 2 cloves garlic, minced
@@ -33,7 +34,7 @@ categories:
 ## Directions
 
 * Prepare the balsamic sauce first. 
-* In a small bowl, stir together **4 Tbsp** balsamic vinegar, **1.5 Tbsp** soy sauce, **1 Tbsp** brown sugar, **2 cloves** (or 2 tsp) minced garlic, and **1/4 tsp** dried thyme. 
+* In a small bowl, stir together **4 Tbsp** balsamic vinegar, **2 Tbsp** rice vinegar, **1.5 Tbsp** soy sauce, **1 Tbsp** brown sugar, **2 cloves** (or 2 tsp) minced garlic, and **1/4 tsp** dried thyme. 
 * Set the sauce aside.
 
 * Heat a large skillet over medium. 
