--- a/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.Rmd
+++ b/_posts/2021-04-11-balsamic-chicken-mushrooms/balsamic-chicken-mushrooms.Rmd
@@ -42,7 +42,7 @@ categories:
 * Add the pieces of chicken breast to the skillet and cook browned and cooked through. 
 * Remove the chicken to a clean plate and cover to keep warm.
 
-* While the chicken is cooking, clean **16 oz** of mushrooms and then slice the bigger ones in half. 
+* While the chicken is cooking, clean **16 oz** of white mushrooms and then slice the bigger ones in half. 
 * After removing the chicken from the skillet, add the mushrooms in their place, and sauté in the remaining oil and fat until the mushrooms are slightly tender and browned on the outside (5-7 minutes).
 
 * Turn the heat down to medium-low. 
