--- a/posts/2022-07-03-chili/index.qmd
+++ b/posts/2022-07-03-chili/index.qmd
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(echo = FALSE)
 * 1 1/2 tbsp. chili powder
 * 1 tsp. ground cumin
 * 1 tsp. dried oregano
-* 1 (15-oz) can kidney beans, drained
+* 2 (15-oz) cans kidney beans, drained
 * 1 (28-oz) can crushed tomatoes
 
 ## Toppings
@@ -38,6 +38,6 @@ knitr::opts_chunk$set(echo = FALSE)
 * Stir in **3 tsp** minced garlic and cook until fragrant, about 1 minute more, then add **2 tbsp** tomato paste, stirring to combine. 
 * Add **1 - 1 1/2 lbs** ground beef and cook until no longer pink. Drain fat and return to heat.
 * Add **1 1/2 tbsp** chili powder, **1 tsp** cumin, **1 tsp** oregano, and season generously with salt and pepper. 
-* Pour in **1 can (15 oz)** of drained and rinsed kidney beans, and **1 can (28 oz)** of crushed tomatoes and bring chili to a boil. 
+* Pour in **2 cans (15 oz)** of drained and rinsed kidney beans, and **1 can (28 oz)** of crushed tomatoes and bring chili to a boil. 
 * Reduce heat and simmer 20 minutes. 
 * Season with more salt and pepper, if necessary
