--- a/posts/2023-05-05-vanilla-cake/index.qmd
+++ b/posts/2023-05-05-vanilla-cake/index.qmd
@@ -23,4 +23,16 @@ editor_options:
 
 ## Directions
 
-* Mix **2 1/2 cups** flour, **2 1/2 tsp** baking powder, **1 small box** of french vanilla **or** vanilla pudding mix
+* Mix dry ingredients together in a large bowl: 
+  * **2 1/2 cups** flour, 
+  * **2 1/2 tsp** baking powder, 
+  * **1 small box** of french vanilla **or** vanilla pudding mix,
+  * **1 1/2 cups** white sugar 
+* Add wet ingredients to the dry:
+  * **1 cup** french vanilla coffee creamer
+  * **1/2 cup** whole milk
+  * **1/3 cup** oil
+  * **2 tsp** vanilla
+  * **1 cup** sour cream
+  * **4** egg whites
+* Bake at 350F for 30 - 40 minutes.
