trying 1/2 tsp of old bay seasoning next time

--- a/posts/2023-05-21-instant-pot-potato-soup/index.qmd
+++ b/posts/2023-05-21-instant-pot-potato-soup/index.qmd
@@ -16,7 +16,7 @@ editor_options:
 * 2 cups vegetable broth
 * 1/2 cup vegetable broth
 * 6 tbsp flour
-* 1 tsp Old Bay seasoning
+* 1/2 tsp Old Bay seasoning
 * 1 tsp minced garlic
 * 2 cups milk
 * Toppings (Greek yogurt, shredded cheddar cheese, bacon bits)
