--- a/posts/2021-03-07-crosbys-baked-beans/index.qmd
+++ b/posts/2021-03-07-crosbys-baked-beans/index.qmd
@@ -16,12 +16,12 @@ date: 03-07-2021
 * 1 small onion, peeled
 * One small apple, peeled and cored
 * 1/3 cup brown sugar
-* ½ cup Crosby’s Fancy Molasses
+* 1 cup molasses (1/2 cup is not enough in my opinion)
 * 1 tsp. salt
-* 1 ½ tsp. dried mustard
-* ½ Tbsp. Worcestershire sauce
-* ½ tsp. freshly ground black pepper
-* Boiling water
+* 1 1/2 tsp. dried mustard
+* 1/2 Tbsp. Worcestershire sauce
+* 1/2 tsp. freshly ground black pepper
+* 2 cups boiling water
 
 ## Directions
 
