--- a/posts/2021-03-07-crosbys-baked-beans/index.qmd
+++ b/posts/2021-03-07-crosbys-baked-beans/index.qmd
@@ -27,7 +27,7 @@ date: 03-07-2021
 
 * Place **2 cups** dried beans in the instant pot and cover with an inch of water (about 4 cups).
 * Secure the lid, turn the pot’s steam vent to close. On manual mode, set the timer for 20 minutes.
-* While the beans are cooking, combine **1/3 cup** brown sugar, **1/2 cup** molasses, **1 tsp** salt, **1 1/2 tsp** dried mustard, **1/2 Tbsp** Worcestershire, and **1/2 tsp** black pepper in a bowl.
+* While the beans are cooking, combine **1/3 cup** brown sugar, **1 cup** molasses, **1 tsp** salt, **1 1/2 tsp** dried mustard, **1/2 Tbsp** Worcestershire, and **1/2 tsp** black pepper in a bowl.
 * Add two cups of boiling water and stir to combine.
 
 * When the timer beeps, allow the pot to depressurize for about 20 minutes, press “cancel” and then carefully turn the steam vent to open and remove the lid.
