--- a/posts/2021-03-07-crosbys-baked-beans/index.qmd
+++ b/posts/2021-03-07-crosbys-baked-beans/index.qmd
@@ -12,7 +12,7 @@ date: 03-07-2021
 
 ## Ingredients
 
-* 2 cups dried navy or pea beans
+* 2 cups (1 lb) dried navy (pea) beans or pinto beans
 * 1 small onion, peeled
 * One small apple, peeled and cored
 * 1/3 cup brown sugar
@@ -25,8 +25,8 @@ date: 03-07-2021
 
 ## Directions
 
-* Place **2 cups** dried beans in the instant pot and cover with an inch of water (about 4 cups).
-* Secure the lid, turn the pot’s steam vent to close. On manual mode, set the timer for 20 minutes.
+* Place **2 cups (1 lb)** dried beans in the instant pot and cover with an inch of water (about 4 cups).
+* Secure the lid, turn the pot’s steam vent to close. On manual mode, set the timer for 20 (navy / pea) or 23 minutes (pinto).
 * While the beans are cooking, combine **1/3 cup** brown sugar, **1 cup** molasses, **1 tsp** salt, **1 1/2 tsp** dried mustard, **1/2 Tbsp** Worcestershire, and **1/2 tsp** black pepper in a bowl.
 * Add two cups of boiling water and stir to combine.
 
@@ -34,7 +34,7 @@ date: 03-07-2021
 * Drain the beans well and return them to the pot.
 
 * Bury **1 small** onion and **1** apple in the beans and pour molasses mixture over the beans.
-* Secure the lid, turn the steam vent to close, and set the timer for 16 minutes.
+* Secure the lid, turn the steam vent to close, and set the timer for 16 (navy / pea) or 20 (pinto) minutes.
 * When the 16 minutes are up (timer beeps), allow your pot to depressurize another 20 minutes, turn steam vent to open and remove lid.
 * If your beans are too runny, turn unit to saute mode and saute for 5-7 minutes, stirring from time to time.
 
