--- a/posts/2021-03-20-butternut-squash-sweet-potato-soup/index.qmd
+++ b/posts/2021-03-20-butternut-squash-sweet-potato-soup/index.qmd
@@ -12,8 +12,8 @@ categories:
 
 * 1 onion
 * 6 cups veggie broth
-* 2 1/2 cups butternut squash, peeled, seeded, and cubed
-* 2 cups sweet potato, peeled and diced
+* 4 cups butternut squash, peeled, seeded, and cubed
+* 3 cups sweet potato, peeled and diced
 * 3 carrots, peeled and sliced
 * 1 can cannellini beans
 * 1/4 teaspoon salt
