--- a/posts/2025-01-14-breakfast-cookies/index.qmd
+++ b/posts/2025-01-14-breakfast-cookies/index.qmd
@@ -31,3 +31,5 @@ editor_options:
 * Finally, with a spatula (or your hands), mix in **4 1/2 cups** toasted oat cereal.
 * Drop **1/2 cup** portions onto a prepared cookie sheet, flattening to 3/4" thickness.
 * Bake until cookies are lightly browned around the edges, about 10 - 12 minutes.
+
+Modified from Allrecipes magazine.
