--- a/posts/2021-03-20-mac-cheese/index.qmd
+++ b/posts/2021-03-20-mac-cheese/index.qmd
@@ -13,22 +13,25 @@ v 0.0.1
 
 ## Ingredients
 
-* macaroni noodles - 8 ounces cooked just al-dente
+* macaroni noodles - 16 ounces cooked just al-dente
 * 4 Tbsp butter
 * 4 Tbsp flour
-* 1 cup milk
-* 1 1/2 cup shredded cheddar cheese
+* 1 1/2 cups milk
+* 10 oz (by weight) freshly shredded cheddar cheese
+* 1/2 tsp garlic powder
+* 1/2 tsp onion powder
 * Optional:
   * Cubed ham (1 cup) + 1 tsp of yellow mustard
 
 ## Instructions
 
-* Cook 8 oz macaroni.
+* Cook 16 oz macaroni according to package directions.
 * In a large saucepan, melt **4 Tbsp** butter. 
 * Add **4 Tbsp** flour, mixing until all butter is in the flour and "smooth". 
-* Gradually add **1 cup** milk, making sure that all of the flour/butter mix is getting mixed into the milk. 
+* Gradually add **1 1/2 cups** milk, making sure that all of the flour/butter mix is getting mixed into the milk. 
 * Heat slowly until thickened. 
-* Remove from heat, stir in cheese until melted. 
+* Add **1/2 tsp** garlic and onion powder.
+* With heat on low, stir in **10 oz** freshly grated cheddar cheese until melted. 
 * Add cheese sauce to drained macaroni.
 
 If desired, bake in the oven at 350F for 30-45 minutes. Serve hot.
